overflow issue solved

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{ margin: 0;
   padding: 0;
   box-sizing:border-box;
-
+  overflow-x:hidden;
 }
 @media(max-width:600px){
   nav{
@@ -11,6 +11,10 @@
   .nav_menu ul a{
     color:black;
     }
+    
+nav a:hover{
+  color:#00d9ff;
+}
 }
 @media(min-width:600px){
 nav{
@@ -29,7 +33,7 @@ justify-content: space-between;
 align-items: center;
 }
 
-.nac_menu ul li:hover{
+nav a:hover{
   color:#00d9ff;
 }
 .nav_menu li{
@@ -308,7 +312,10 @@ label{ display:block; margin-bottom:5px; }
   border-radius:6px;
   color:black;
 }
-
+.pfic img:hover{
+  height:4%;
+  width:4%;
+}
 .skill #move{
   color:white;
   font-family: sans-serif;
@@ -318,6 +325,7 @@ label{ display:block; margin-bottom:5px; }
   font-weight:bold;
   background-color: rgb(43, 41, 41);
   font-size:25px;
+  margin:80px;
   padding: 25px;
   animation: skim 6s forwards;
   animation-timing-function: ease-in-out;
@@ -371,24 +379,4 @@ label{ display:block; margin-bottom:5px; }
 }
 .abou p, .abou h1{
   animation: net 3s ease-in-out infinite ;
-}
-@keyframes net{
- 0%{ background: linear-gradient(rgb(255, 255, 255), rgb(128, 118, 118));
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;}
-  50%{
-    background: linear-gradient(rgb(90, 87, 87), rgb(49, 44, 44));
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-  }
-  75%{
-    background: linear-gradient(rgb(54, 51, 51), rgb(0, 0, 0));
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-  }
-  100%{
-    background: linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255));
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-  }
 }
